k8s/overlays/prod/patch-resources-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shop-msa-app
spec:
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: shop-msa-app
spec:
  template:
    spec:
      containers:
        - name: product-service
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shop-msa-app
spec:
  template:
    spec:
      containers:
        - name: order-service
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 1Gi
