k8s/overlays/prod/patch-istio-host-prod.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shop-msa-gateway
  namespace: shop-msa-app
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - shop.wookjin.cloud
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: shop-wookjin-cloud-tls
      hosts:
        - shop.wookjin.cloud
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-msa-routes
  namespace: shop-msa-app
spec:
  hosts:
    - shop.wookjin.cloud
